--- a/Blog_Page/AppBlog/templates/AppBlog/about.html
+++ b/Blog_Page/AppBlog/templates/AppBlog/about.html
@@ -5,6 +5,18 @@
 {% block title %}Página Sobre Nosotros{% endblock title %}
 
 {% block main %}
-    <h1>Sobre mi</h1>
-    <p>Esta es la página de "Sobre Nosotros" donde puedes colocar información acerca de tu proyecto.</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <h2 class="text-center">Sobre Mí</h2>
+            <p class="text-center">
+                Hola! Soy Bruno, un desarrollador web en proceso de aprendizaje de Python.
+                Siempre me ha llamado la atención la programación y estoy emocionado de comenzar este nuevo camino.
+                Estoy especialmente interesado en el desarrollo web y disfruto creando aplicaciones web interactivas.
+            </p>
+            <!-- Agrega la imagen aquí y establece el ancho máximo -->
+            <img src="/media/imagenes/1.jpg" alt="Foto de Bruno" class="img-fluid" style="max-width: 300px; height: auto;">
+        </div>
+    </div>
+</div>
 {% endblock main %}
